Refs #3184, make cursor a pointer when hovering over week/year periods that use period selector whitespace.
git-svn-id: http://dev.piwik.org/svn/trunk@6698 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/themes/default/common.css
+++ b/themes/default/common.css
@@ -539,6 +539,7 @@ td.ui-datepicker-other-month.ui-state-hover {
 	color:#000!important;
 	opacity:1!important;
 	border-style: none;
+	cursor:pointer!important;
 }
 
 td.ui-datepicker-other-month.ui-state-hover.ui-datepicker-current-period{
