Refs #3216 adjusting right size of new flags, since the size is hardcoded in the UI. Also making flags appear couple pixels higher
git-svn-id: http://dev.piwik.org/svn/trunk@6713 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/plugins/CoreHome/templates/datatable.css
+++ b/plugins/CoreHome/templates/datatable.css
@@ -66,7 +66,9 @@ table.subDataTable img,
 table.dataTableActions img {
 	vertical-align: middle;
 }
-
+#UserCountrygetCountry table.dataTable img {
+	vertical-align: baseline;
+}
 table.dataTable img {
 	border: 0;
 	margin-right: 1em;
