--- a/plugins/Dashboard/templates/dashboard.css
+++ b/plugins/Dashboard/templates/dashboard.css
@@ -72,6 +72,7 @@
 .widgetContent.loading {
     opacity: 0.5;
     filter:Alpha(opacity:50);
+    background: url('../../../themes/default/images/loading-blue.gif') no-repeat top right;
 }
 
 .widget h2 {
