--- a/plugins/Installation/templates/install.css
+++ b/plugins/Installation/templates/install.css
@@ -9,7 +9,10 @@ body {
 	font-family:Arial,Georgia,"Times New Roman",Times,serif;
 	font-size:17px;
 }
-
+p {
+	margin-bottom:5px;
+	margin-top:10px;
+}
 #title{
 	font-size:50px;
 	color:#284F92;
