refs #2976 updates can be marked a major
git-svn-id: http://dev.piwik.org/svn/trunk@6790 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/themes/default/simple_structure.css
+++ b/themes/default/simple_structure.css
@@ -93,3 +93,7 @@ a { color: #006; }
 	-webkit-border-radius:4px; 
 	padding:15px;
 }
+.warning.normalFontSize {
+	font-size: 100%;
+	padding: 10px;
+}
