--- a/tests/lib/visualphpunit/app/view/home/index.html
+++ b/tests/lib/visualphpunit/app/view/home/index.html
@@ -167,7 +167,7 @@
 
     </div>
 
-    <script src='/libs/jquery/jquery.js'></script>
+    <script src='./js/jquery.js'></script>
     <script src='./js/underscore-min.js'></script>
     <script src='./js/jqueryFileSelector.js'></script>
     <script src='./js/jquery.sortElements.js'></script>
