Refs #3290, fix small bug in last commit
git-svn-id: http://dev.piwik.org/svn/trunk@6840 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/tests/lib/visualphpunit/app/view/home/index.html
+++ b/tests/lib/visualphpunit/app/view/home/index.html
@@ -268,7 +268,7 @@
                            || (suite.status == 'succeeded' && display_succeeded); %>
         
         <div class='suite' data-suite-status='<%= suite.status %>' data-suite-time='<%= suite.time %>'
-             <% if (displaySuite) { %>style='display:none;'<% } %> >
+             <% if (!displaySuite) { %>style='display:none;'<% } %> >
           <% var statusCap = suite.status.charAt(0).toUpperCase() + suite.status.slice(1); %>
           <h3><%= suite.name %></h3>
           <div class='suite-status'>
