Refs #3290, fix another bug in displaying suites bug.
git-svn-id: http://dev.piwik.org/svn/trunk@6841 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/tests/lib/visualphpunit/app/view/home/index.html
+++ b/tests/lib/visualphpunit/app/view/home/index.html
@@ -498,10 +498,10 @@
                     notifications: allResults.notifications,
                     suites: allResults.suites,
                     stats: allResults.stats,
-                    display_failed: $('#display-failed').val(),
-                    display_incomplete: $('#display-incomplete').val(),
-                    display_skipped: $('#display-skipped').val(),
-                    display_succeeded: $('#display-succeeded').val()
+                    display_failed: $('#display-failed').is(':checked'),
+                    display_incomplete: $('#display-incomplete').is(':checked'),
+                    display_skipped: $('#display-skipped').is(':checked'),
+                    display_succeeded: $('#display-succeeded').is(':checked')
                   }));
 
                   $('#sort').triggerHandler('change');
