refs #3332 row actions registry: preparations for Transitions UI
 * row actions are no longer in the HTML templates
 * they are generated in JS
 * plugins can register their custom actions in a registry
 * actions can be available on a subset of tables and rows

git-svn-id: http://dev.piwik.org/svn/trunk@6843 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/plugins/CoreHome/templates/datatable.css
+++ b/plugins/CoreHome/templates/datatable.css
@@ -584,7 +584,6 @@ table.dataTable .dataTableRowActions {
 	display: none;
 	overflow: hidden;
 	margin-top: -5px;
-	width: 40px;
 }
 *+html table.dataTable .dataTableRowActions {
 	margin-top: -7px;
@@ -601,6 +600,8 @@ table.dataTable .dataTableRowActions a img {
 	margin: 0;
 	padding: 0;
 	border: 0;
+	width: 20px;
+	height: 17px;
 }
 
 
