Refs #3184, underline selected period in period selector when it can be clicked & refactor 'change period' tooltip showing code.
git-svn-id: http://dev.piwik.org/svn/trunk@6888 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/themes/default/common.css
+++ b/themes/default/common.css
@@ -158,7 +158,9 @@ a {
 	padding: 2px 0 3px 0;
 	vertical-align:top; 
 }
-
+#periodString label.selected-period-label {
+	text-decoration: underline;
+}
 
 /* About Piwik box top right */
 #header_message {
