Fixes #3334, redesigned the reset password functionality.
Notes:
  * Resetting password is done through AJAX and the reset token does not need to be entered in a form.
  * Moved password related utility functions in UsersManager_API to UsersManager as static functions.
  * Added hidden _isPasswordHashed parameter to UsersManager::updateUser.
  * Make sure superuser login is set in Access instance when setSuperUser(true) is used.
  * Add ability to get rendered form data as array in QuickForm2 (moved existing logic in Piwik_View into new function).


git-svn-id: http://dev.piwik.org/svn/trunk@6900 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/plugins/Login/templates/login.css
+++ b/plugins/Login/templates/login.css
@@ -24,7 +24,7 @@ form .forgetmenot {
 	margin-bottom: 0;
 }
 
-#login form .submit input {
+#login form input.submit {
 	font-family: "Lucida Grande", "Lucida Sans Unicode", Tahoma, Verdana,
 		sans-serif;
 	padding: 3px 5px;
@@ -67,7 +67,8 @@ form p {
 	padding: 16px;
 }
 
-#form_password,#form_password_bis,#form_login,#user_email,#form_token {
+#login_form_password,#reset_form_password,#reset_form_password_bis,
+#login_form_login,#reset_form_login {
 	font-size: 20px;
 	width: 97%;
 	padding: 3px;
@@ -82,7 +83,7 @@ form p {
 	background-color: #eaf3fa;
 }
 
-#login form .submit input {
+#login form input.submit {
 	background-color: #cee1ef !important;
 }
 
@@ -91,17 +92,14 @@ form p {
 	border-color: #c00;
 }
 
-#login form .submit input {
+#login form input.submit {
 	background-color: #e5e5e5;
 	color: #246;
 	border-color: #80b5d0;
 }
 
-#login form .submit input:hover {
+#login form input.submit:hover {
 	color: #d54e21;
-}
-
-#login form .submit input:hover {
 	border-color: #328ab2;
 }
 
@@ -155,4 +153,9 @@ a {
 	font-size: 18pt;
 	margin-left:50px;
 	margin-bottom:30px;
+}
+
+.loadingPiwik {
+	float: left;
+	margin-left: 16px;
 }
