refs #3332 highlighting groups on hover in Transitions
git-svn-id: http://dev.piwik.org/svn/trunk@7033 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/plugins/Transitions/templates/transitions.css
+++ b/plugins/Transitions/templates/transitions.css
@@ -111,6 +111,10 @@
 	margin-bottom: 11px;
 }
 
+.Transitions_CenterBoxMetrics .Transitions_Highlighted {
+	color: #E07000;
+}
+
 span.Transitions_Metric {
 	font-weight: bold;
 	cursor: default;
@@ -173,4 +177,5 @@ body .piwik-tooltip.Transitions_Tooltip_Small {
 
 .Transitions_SingleLine {
 	font-size: 12px;
+	height: 21px;
 }
