--- a/plugins/Transitions/templates/transitions.css
+++ b/plugins/Transitions/templates/transitions.css
@@ -4,6 +4,7 @@
 	z-index: 1500;
 	height: 550px;
 	text-align: left;
+	margin-left: 7px;
 }
 
 #Transitions_Canvas_Background {
@@ -29,7 +30,7 @@
 }
 
 #Transitions_CenterBox {
-	margin: 60px 0 0 320px;
+	margin: 60px 0 0 345px;
 	width: 208px;
 	height: 344px;
 	background: #f7f7f7;
@@ -85,7 +86,7 @@
 }
 
 #Transitions_Loops {
-	margin: 435px 0 0 320px;
+	margin: 435px 0 0 346px;
 	width: 208px;
 	text-align: center;
 	line-height: 25px;
@@ -116,6 +117,10 @@ span.Transitions_Metric {
 	cursor: default;
 }
 
+.Transitions_Value0 {
+	color: #666;
+}
+
 .Transitions_TitleOfOpenGroup {
 	font-size: 12px;
 	color: #255792;
@@ -124,7 +129,7 @@ span.Transitions_Metric {
 
 .Transitions_BoxTextLeft,
 .Transitions_BoxTextRight {
-	width: 130px;
+	width: 165px;
 	height: 42px;
 	overflow: hidden;
 }
@@ -141,7 +146,7 @@ span.Transitions_Metric {
 
 .Transitions_BoxTextLeft.Transitions_HasBackground {
 	background-position: 0 1px;
-	width: 150px;
+	width: 175px;
 }
 .Transitions_BoxTextLeft.Transitions_HasBackground span {
 	display: block;
@@ -160,8 +165,8 @@ span.Transitions_Metric {
 .Transitions_CurveTextRight {
 	color: #255792;
 	font-weight: bold;
-	width: 28px;
-	text-align: right;
+	width: 34px;
+	text-align: center;
 	cursor: default;
 }
 
