--- a/plugins/CoreHome/templates/datatable.css
+++ b/plugins/CoreHome/templates/datatable.css
@@ -612,6 +612,11 @@ table.dataTable .dataTableRowActions a img {
 	height: 17px;
 }
 
+body .piwik-tooltip.rowActionTooltip {
+	font-size: 11px;
+	padding: 3px 5px 3px 6px;
+}
+
 
 .limitSelection {
     float: right;
