Refs #3184, fix firefox period selector issue when double clicking the selected period and make sure double clicking period selector labels doesn't select the text.
git-svn-id: http://dev.piwik.org/svn/trunk@7092 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/themes/default/common.css
+++ b/themes/default/common.css
@@ -157,6 +157,9 @@ a {
 	display:inline-block; 
 	padding: 2px 0 3px 0;
 	vertical-align:top; 
+	user-select: none;
+	-moz-user-select: none;
+	-webkit-user-select: none;
 }
 #periodString label.selected-period-label {
 	text-decoration: underline;
