--- a/themes/default/common.css
+++ b/themes/default/common.css
@@ -737,3 +737,9 @@ table.entityTable tr td a {
 	font-weight: bold;
 	color: #7E7363;
 }
+
+
+
+/* Popover */
+
+.ui-dialog .ui-widget-header{ background:none; border:0; font:bold 18px Arial, Helvetica, sans-serif; color: #7e7363;	clear:both;}
