refs #3332 Transitions help button linking to doc page
git-svn-id: http://dev.piwik.org/svn/trunk@7165 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/themes/default/common.css
+++ b/themes/default/common.css
@@ -742,4 +742,22 @@ table.entityTable tr td a {
 
 /* Popover */
 
-.ui-dialog .ui-widget-header{ background:none; border:0; font:bold 18px Arial, Helvetica, sans-serif; color: #7e7363;	clear:both;}
+.ui-dialog .ui-widget-header {
+	background: none; 
+	border: 0; 
+	font: bold 18px Arial, Helvetica, sans-serif; 
+	color: #7e7363;	
+	clear: both;
+}
+
+.ui-dialog-titlebar-help {
+	position: absolute;
+	right: 33px;
+	top: 50%;
+	width: 16px;
+	margin: -8px 0 0 0;
+	padding: 0;
+	height: 16px;
+	background: url(images/help.png);
+	overflow: hidden;
+}
